# ksc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Keyboard Shortcut.alfredworkflow  KeyboardShortcut.alfredworkflow  KeyboardShortcut.kmmacros  LICENSE  README.md  kbdsc  ksc  pyproject.toml  pytest.ini  setup.py  tasks.py
gfx/Alfred Keyboard Shortcut Icon.pxd/: metadata.info
gfx/Alfred Keyboard Shortcut Icon.pxd/QuickLook/: Icon.tiff  Thumbnail.tiff
gfx/Alfred Keyboard Shortcut Icon.pxd/data/: 95E7E97F-F5FA-4299-ADAF-3BB3C55B8E7F
src/ksc/: __init__.py  __main__.py  macos.py
tests/: test_macos.py  test_main.py
